--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^5.9.1",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "nookies": "^2.5.2",
