--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^5.9.1",
+    "@tanstack/react-query": "^5.24.6",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "next": "14.1.0",
@@ -21,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
+    "react-query": "^3.39.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
