--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.24.6",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
+    "googleapis": "^134.0.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "nookies": "^2.5.2",
