--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^134.0.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "next-seo": "^6.5.0",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "^18",
